<resources>
    <string name="app_name">Alarm-pro</string>

    <string name="txt_resolve_failure">二维码解析失败</string>

    <!-- 二维码扫描-->
    <string name="input">手动输入</string>
    <string name="turn_on_flash">打开</string>
    <string name="cancel_finish">取    消</string>
    <string name="flash">闪光灯</string>
    <string name="turn_off_flash">关闭</string>
    <string name="input_isbn">手动输入编号</string>
    <string name="input_isbn_hint">请输入编号</string>
    <string name="search">搜  索</string>
    <string name="ok">确认</string>
    <string name="scan_tips">将二维码/条形码放入框内\n即可自动扫描</string>
    <string name="album">相册</string>
    <string name="scan_title">二维码扫描</string>
    <string name="scan_empty">没有发现二维码/条形码</string>
    <string name="tip">提示</string>
    <string name="txt_pls_open_camera">请开启摄像头权限</string>
    <string name="msg_camera_framework_bug2">打开摄像头失败，请尝试在应用权限管理中开启%s的摄像头权限</string>
    <string name="open_flash_light">打开手电筒</string>
    <string name="close_flash_light">关闭手电筒</string>
    <string name="scan_and_scan">扫一扫</string>


    <!-- 录制视频-->
    <string name="record_video">录制视频</string>
    <string name="run_compress_command">运行压缩命令</string>
    <string name="no_video_tips">视频文件不存在,请先录制视频</string>
    <string name="fail_when_camera_try_autofocus">对焦失败:%1$s</string>
    <string name="dont_have_camera_error">对不起,没有发现摄像头,请检查</string>
    <string name="only_have_one_camera">对不起,您只有一个摄像头,无法切换</string>
    <string name="video_captured">视频已成功录制</string>
    <string name="camera_init_fail">摄像头初始化失败</string>
    <string name="dont_have_front_camera">当前设备没有前置摄像头</string>
    <string name="changing_flashLight_mode">切换闪光灯模式失败</string>
    <string name="open_video">打开视频</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="compress_result_input_output">输入:%1$s,大小:%2$s,输出:%3$s,大小:%4$s</string>
    <string name="path">视频路径:%1$s,大小:%2$s</string>
    <string name="dont_have_app_to_open_file">没有支持此格式的播放器</string>
    <string name="txt_set">现在设置</string>
    <string name="permission_denied_tips">使用[%s]需要授予必要的使用权限哦</string>
    <string name="permission_refuse_tips">您拒绝了[%s]必要的使用权限，请到 应用-权限 去授予</string>
    <string name="txt_retry">点我重试！</string>
    <string name="txt_net_error_tips">网络异常，请检查网络或联系系统管理员</string>


    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="bad_network">服务器异常</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="data_null_error">数据为空</string>
    <string name="custom_error">自定义异常</string>
    <string name="response_return_error">服务器返回数据失败</string>
    <string name="tab_home">首页</string>
    <string name="tab_alarm">报警</string>
    <string name="tab_pre_alarm">预警</string>
    <string name="tab_me">我的</string>
    <string name="exit_app_tips">再按一次退出程序</string>
    <string name="txt_more">更多</string>
    <string name="txt_news">推荐消息</string>
    <string name="txt_alarm_notify">警情通知</string>
    <string name="txt_read_phone_state">获取手机状态</string>
    <string name="txt_url_cannot_open">该链接无法使用浏览器打开。</string>
    <string name="txt_linkman">紧急联系人</string>
    <string name="txt_alarm_test">报警测试</string>
    <string name="txt_default_pre_alarm">一般预警</string>
    <string name="txt_default_bus_alarm">乘车预警</string>
    <string name="txt_me_device">我的设备</string>
    <string name="txt_me_cdk">我的激活码</string>
    <string name="txt_apply">应急申请</string>
    <string name="txt_me_server">我的客服</string>
    <string name="txt_spd_version">设备版本</string>
    <string name="txt_app_version">软件版本</string>
    <string name="txt_aboutus">关于我们</string>
    <string name="txt_user_center">用户中心</string>
    <string name="txt_logout">退出登陆</string>
    <string name="txt_passport">护照信息</string>
    <string name="txt_modify_pwd">修改密码</string>
    <string name="txt_student_data">学生资料</string>
    <string name="txt_person_data">个人资料</string>
    <string name="txt_Alert_notifications">警情通知</string>
    <string name="txt_alarm_record">报警记录</string>
    <string name="txt_pre_alarm_notification">预警通知</string>
    <string name="txt_pre_alarm_record">预警记录</string>
    <string name="txt_copy_succ">复制成功</string>
    <string name="txt_device_info">设备信息</string>
    <string name="txt_alarm_man">报警人</string>
    <string name="txt_cdk">激活码</string>
    <string name="txt_add_device">添加设备</string>
    <string name="txt_add_cdk">添加激活码</string>
    <string name="txt_write_device_id">扫码或填写序列号(必填)</string>
    <string name="txt_next">下一步</string>
    <string name="txt_devicce_name">设备名称(非必填)</string>
    <string name="txt_device_id_error">设备ID为12位</string>
    <string name="txt_device_id_not_null">序列号不能为空</string>
    <string name="txt_login_failure_tips">认证失效或账号已在其他设备登陆，如果不是您的操作，请尽快修改密码。</string>
    <string name="txt_to_login">马上登陆</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_login">登陆</string>
    <string name="txt_register">注册</string>
    <string name="txt_device_name">设备名称</string>
    <string name="txt_device_number">序列号</string>
    <string name="txt_device_status">设备状态</string>
    <string name="txt_device_battery">设备电量</string>
    <string name="txt_device_version">设备版本</string>
    <string name="txt_device_unbind">解绑</string>
    <string name="txt_device_bind">绑定</string>

    <string name="txt_spd_state_activation_no">未激活</string>
    <string name="txt_spd_state_activation">激活</string>
    <string name="txt_spd_state_alarm">报警</string>
    <string name="txt_spd_state_early">预警</string>
    <string name="txt_spd_state_update">升级</string>
    <string name="txt_name">名称</string>
    <string name="txt_state">状态</string>
    <string name="txt_battery">电量</string>
    <string name="txt_add_device_tips">您已绑定过设备</string>
    <string name="txt_add_cdk_tips">您已绑定过激活码</string>
    <string name="txt_cdk_validity">有效期至</string>
    <string name="txt_cdk_state_activation">未激活</string>
    <string name="txt_spd_state_vaild">有效</string>
    <string name="txt_spd_state_unbinded">已解绑</string>
    <string name="txt_spd_state_outdate">已过期</string>
    <string name="txt_user_info">用户信息</string>
    <string name="txt_photo_select">获取照片</string>
    <string name="txt_camera">拍照</string>
    <string name="txt_album">相册</string>
    <string name="txt_input_content_tips">输入修改内容</string>

    <string name="txt_modify_append">修改%s</string>
    <string name="txt_nickname">昵称</string>
    <string name="txt_sex">性别</string>
    <string name="txt_blood">血型</string>
    <string name="txt_sex_man">男</string>
    <string name="txt_sex_woman">女</string>
    <string name="txt_not_filled">未填写</string>
    <string name="txt_modify_success">修改成功</string>
    <string name="txt_allergy">过敏史</string>
    <string name="txt_homeAddr">常驻地址</string>
    <string name="txt_pls_input_password">请输入密码</string>
    <string name="txt_pls_input_phone">请输入手机号</string>
    <string name="tips_phone_not_null">手机号不能为空!!</string>
    <string name="tips_password_not_null">密码不能为空!!</string>
    <string name="tips_email_not_null">邮箱不能为空!!</string>
    <string name="txt_login_phone">手机登陆</string>
    <string name="txt_login_email">邮箱登陆</string>
    <string name="txt_switch_language">切换语言</string>
    <string name="txt_cn">中文</string>
    <string name="txt_en">English</string>
    <string name="txt_forget_password">忘记密码?</string>
    <string name="txt_pls_input_captcha">请输入验证码</string>
    <string name="txt_pls_input_password_regex">密码由6-15位字母和数字组成</string>
    <string name="txt_login_go">已有账号直接登陆</string>
    <string name="txt_register_phone">手机注册</string>
    <string name="txt_register_email">邮箱注册</string>
    <string name="txt_password_mismatch">密码不一致</string>
    <string name="txt_get_captcha">获取验证码</string>

</resources>
